[tool.poetry]
name = "pyvaheat"
version = "0.1.0"
description = "Wrapper class to control VAHEAT via serial communication"
authors = ["Ikuo Obataya <i.obataya@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
